--- a/practice/byui.html
+++ b/practice/byui.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>BYUI</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header>
@@ -13,12 +14,16 @@
       </nav>
     </header>
     <main>
-      <h1>Brigham Young University Idaho</h1>
-      <img src="https://www.byui.edu/images/service-sites/map-banner.jpg" alt="BYUI Campus" />
-      <p>
-        BYU-Idaho is a comfortable place to learn and grow as a disciple of
+      <h1 style="color:blue;">Brigham Young University Idaho</h1>
+      <img src="https://www.byui.edu/images/service-sites/map-banner.jpg " width="600px" alt="BYUI Campus" />
+      <p style="font-size: 18px;">
+        BYU-Idaho is a comfortable place to learn and grow as a disciple of 
         Jesus Christ because students, faculty, and employees share a commitment
         to live the gospel.
+      </p>
+      
+      <p>I always wanted to study in the BYU-Idaho on campus but that could not happen so I am study BYU-Idaho online whihc is no difference
+        education, its same!
       </p>
     </main>
     <footer>
