--- a/practice/byui.html
+++ b/practice/byui.html
@@ -22,7 +22,7 @@
         to live the gospel.
       </p>
       
-      <p>I always wanted to study in the BYU-Idaho on campus but that could not happen so I am study BYU-Idaho online whihc is no difference
+      <p>I always wanted to study in the BYU-Idaho on campus but that could not happen so I am studing BYU-Idaho online whihc is not different in
         education, its same!
       </p>
     </main>
