--- a/wwr/index.html
+++ b/wwr/index.html
@@ -31,6 +31,25 @@
             </div>
         </section>
     </div>
+    <main class="home-grid">
+        <section class="river-card">
+            <img class="card-img" src="images/river.jpg" alt="river in forest">
+            <img class="card-img" src="images/river icon.png" alt="river icon">
+            <h2>Rivers</h2>
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="images/camping.jpg" alt="camping in mountains">
+            <img class="icon" src="images/fire.jpg" alt="fire icon">
+            <h2>Camping</h2>
+
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.jpg" alt="oars icon">
+            <h2>Rapids</h2>
+
+        </section>
+    </main>
 
     
 </body>
