--- a/wwr/index.html
+++ b/wwr/index.html
@@ -47,7 +47,7 @@
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat" width="500" height="300">
             <img class="icon" src="images/oars.png" alt="oars icon" width="70" height="60">
             <h2>Rapids</h2>
-        <section>
+        </section>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" width="500" height="300">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -61,7 +61,7 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https:/facebook.com">
+            <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="fb icon" width="70" height="60">
             </a>
             <a href="https://twitter.com">
