--- a/wwr/index.html
+++ b/wwr/index.html
@@ -62,14 +62,11 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon" width="70" height="60">
-            </a>
+                <img src="images/facebook.png" alt="fb icon"></a>
             <a href="https://twitter.com">
-                <img src="images/Twitter.png" alt="twitter icon" width="70" height="60">
-            </a>
+                <img src="images/Twitter.png" alt="twitter icon"></a>
             <a href="https://instagram.com">
-                <img src="images/Instagram.png" alt="instagram icon"  width="70" height="60">
-            </a>
+                <img src="images/Instagram.png" alt="instagram icon" ></a>
         
             
         </div>
