--- a/practice/byui.html
+++ b/practice/byui.html
@@ -15,7 +15,8 @@
     </header>
     <main>
       <h1 style="color:blue;">Brigham Young University Idaho</h1>
-      <img src="https://www.byui.edu/images/service-sites/map-banner.jpg " width="600px" alt="BYUI Campus" />
+      <img src="https://www.byui.edu/images/service-sites/map-banner.jpg ">
+      
       <p class="main-para">
         BYU-Idaho is a comfortable place to learn and grow as a disciple of 
         Jesus Christ because students, faculty, and employees share a commitment
