--- a/wwr/challenge.html
+++ b/wwr/challenge.html
@@ -14,7 +14,7 @@
             others & being able to help them.</p>
         <p>---President Nelson</p>
         <p>
-            <ol>
+            <ol class="myul">
                 <li>Faith in the Lord Jesus Christ</li>
                 <li>Repentance</li>
                 <li>Baptism by immersion for the remission of sins</li>
@@ -25,14 +25,8 @@
         <h2>
             <img src="images/president nelson.jpeg" alt="President Russell M.Nelson", width="25%">
         </h2>
-        <p class="">"Because of the 
-            Savior's Atonement, 
-            His gospel provides 
-            an invitation to 
-            keep changing, 
-            growing, and 
-            becoming more 
-            pure."</p>
+        <p>"Because of the Savior's Atonement, His gospel provides 
+            an invitation to keep changing, growing, and becoming more pure."</p>
         <p>Russell M.Nelson</p>
         <p>President of the Church of Jesus Christ of Latter-day Saints</p>
             
